# tethysapp-fimserve_viewer

./: .gitattributes  .gitignore  README.md  install.yml  post_install.py  pyproject.toml
tethysapp/fimserve_viewer/: app.py  controllers.py  fim_logic.py
tethysapp/fimserve_viewer/public/css/: main.css
tethysapp/fimserve_viewer/public/js/: main.js
tethysapp/fimserve_viewer/templates/fimserve_viewer/: home.html
tethysapp/fimserve_viewer/tests/: tests.py
